Add 404 route iwth redirection. Add layout component. Add some global styles

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,8 +1,10 @@
 .Navbar{
     background-color: pink !important;
-    
+    padding: 10px;
+    margin-bottom: 30px;
 }
 
 .light__theme{
     color: white !important;
 }
+
